Revert "Rereate Director"
This reverts commit fefca65c48d7b71a3806aff93bb88d7e2702aab4.